--- a/chatopia/app/components/sidebar/DesktopSidebar.module.css
+++ b/chatopia/app/components/sidebar/DesktopSidebar.module.css
@@ -11,11 +11,32 @@
 }
 
 .list{
+    all:unset;
     list-style: none;
     display: flex; 
     margin-top: 0.25rem; 
     flex-direction: column; 
     align-items: center; 
+    justify-content: center;
+}
+
+.accountNavbar{
+    display: flex; 
+    margin-top: 1rem; 
+    flex-direction: column; 
+    justify-content: space-between; 
+    align-items: center; 
+}
+
+.avatarContainer{
+    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms; 
+    cursor: pointer; 
+}
+
+.avatarContainer:hover{
+    opacity: 0.75;
 }
 
 @media (min-width: 1024px) {
