--- a/chatopia/app/components/Button.module.css
+++ b/chatopia/app/components/Button.module.css
@@ -36,6 +36,11 @@
 
 .secondary{
     color: #111827; 
+    transition: all 0.4s ease;
+}
+
+.secondary:hover{
+    background-color: #bbbbbb;
 }
 
 .danger {
