--- a/chatopia/app/globals.css
+++ b/chatopia/app/globals.css
@@ -16,3 +16,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem; 
+}
