--- a/chatopia/app/components/EmptyState.module.css
+++ b/chatopia/app/components/EmptyState.module.css
@@ -7,7 +7,7 @@
     justify-content: center; 
     align-items: center; 
     height: 100%; 
-    background-color: #F3F4F6; 
+    background-color: var(--bg-color); 
     /* background-color: #314670; */
 }
 
@@ -23,7 +23,7 @@
     font-size: 1.5rem;
     line-height: 2rem; 
     font-weight: 600; 
-    color: #111827; 
+    color: var(--text-color); 
 }
 
 @media (min-width: 640px) {
