--- a/chatopia/app/components/sidebar/DesktopSidebar.module.css
+++ b/chatopia/app/components/sidebar/DesktopSidebar.module.css
@@ -51,6 +51,6 @@
         padding-bottom: 1rem; 
         flex-direction: column; 
         width: 5rem; 
-        background-color: #ffffff; 
+        background-color: var(--bg-color); 
     }
 }
