--- a/chatopia/app/globals.css
+++ b/chatopia/app/globals.css
@@ -3,15 +3,30 @@
   --light : #F1DAC4;
   --primary-color: #70A0AF;
   --secondary-color: #474973;
+  --warning : red;
   --text-color: #0D0C1D;
   --bg-color: #ededed;
+  --fg-color: #f3f4f6;
+}
+
+[data-theme="dark"]{
+  --bg-color: #292569 ;
+  --fg-color: #4c488b;
+  --text-color: white ;
+  --primary-color: #474973 ;
+  --secondary-color: #70A0AF ;
+  
+}
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   /* background-color: var(--bg-color); */
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
