WIP Contact List

--- a/chatopia/app/globals.css
+++ b/chatopia/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   --dark : #161B33 ;
   --light : #F1DAC4;
@@ -26,8 +28,12 @@
 
 body {
   /* background-color: var(--bg-color); */
-
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
