--- a/chatopia/app/users/components/UserList.module.css
+++ b/chatopia/app/users/components/UserList.module.css
@@ -12,12 +12,13 @@
 }
 
 .container{
+    padding-top: 1rem; 
+    margin-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1rem; 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .header{
@@ -31,6 +32,21 @@
     font-size: 1.5rem;
     line-height: 2rem; 
     font-weight: 700; 
+}
+
+.addMessageIcon{
+    padding: 0.5rem; 
+    border-radius: 9999px; 
+    color: #4B5563; 
+    background-color: #F3F4F6; 
+    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms; 
+    cursor: pointer;     
+}
+
+.addMsgIcon:hover{
+    opacity: 0.75; 
 }
 
 @media (min-width: 1024px){
